# ColibriLocal

./: README.md  pyproject.toml
data/delta/00_control/watermarks/: part-00000-41673b56-229a-4e32-b9c8-9a268d23ff57-c000.snappy.parquet  part-00000-e7df904d-2186-4aae-8ee1-ebce64f61f1e-c000.snappy.parquet  part-00000-edc4d871-2bf5-418e-9e69-d615413c55bd-c000.snappy.parquet
data/delta/00_control/watermarks/_delta_log/: .00000000000000000000.json.crc
data/delta/01_bronze/wind_turbines/: part-00000-062ce9f1-7960-451c-aba0-0466c2a6e539-c000.snappy.parquet  part-00000-115b8a52-ae6d-41fe-a877-7fee456af3eb-c000.snappy.parquet  part-00000-3e66b906-e135-48f4-836d-c1af74825458-c000.snappy.parquet
data/delta/02_silver/wind_turbine_clean/: part-00000-77793929-20da-4d40-bc22-b223965b5b38-c000.snappy.parquet  part-00000-7e7cf4c0-2ad1-4527-90ce-28fa8b8a5a72-c000.snappy.parquet  part-00000-b0a6a6a8-432c-4519-b93b-a1e8213af82d-c000.snappy.parquet  part-00000-b48f962b-14ad-4f93-b040-bf7d862e8e97-c000.snappy.parquet
data/delta/02_silver/wind_turbine_quarantine/: part-00000-36cc38c2-5a02-49c0-8250-de87f7b63770-c000.snappy.parquet  part-00000-c1a5837e-ebaf-4758-82f9-6c554d2f6d58-c000.snappy.parquet
data/raw/wind_turbines/: data_group_4.csv
sandbox/: eda.ipynb
src/core/bronze/: bronze_wt_power.py
src/core/gold/: gold_wt_power.py
src/core/silver/: silver_wt_power.py
src/pipelines/: pl_wt_power.py
src/utils/: common.py  constants.py
tests/: conftest.py  test_common.py  test_silver_wt_power.py
uc/: README.md  list_tables.sh  register_tables.sh
(+7 files in other folders)
